@@ -8,6 +8,7 @@
     we try to read more (Stefan Bühler, from the lightttpd project)
   add io_fd_canwrite (like io_fd but assume the fd is writable)
   save a few syscalls here and there
+  add awesome hack in isset.h (comex, Linus Torvalds)
 
 0.28:
   add uint64 pack and unpack routines
